# cfs-telemetry-app

./: README.md
bridge/: lora_telemetry_bridge.py  lora_telemetry_bridge_design.md  mavlink_uart_bridge.py
img_app/: CMakeLists.txt  README.md  arch_build.cmake  mission_build.cmake
img_app/config/: default_img_app_fcncode_values.h  default_img_app_interface_cfg_values.h  default_img_app_internal_cfg_values.h  default_img_app_mission_cfg.h  default_img_app_msg.h  default_img_app_msgdefs.h  default_img_app_msgid_values.h  default_img_app_msgids.h  default_img_app_msgstruct.h  default_img_app_perfids.h  default_img_app_platform_cfg.h  default_img_app_topicid_values.h  default_mavlink_bridge_app_fcncode_values.h  default_mavlink_bridge_app_interface_cfg_values.h  default_mavlink_bridge_app_msg.h  default_mavlink_bridge_app_msgdefs.h  default_mavlink_bridge_app_msgid_values.h
lora_fc_downlink_app/: CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  arch_build.cmake  mission_build.cmake
lora_fc_downlink_app/config/: default_lora_fc_downlink_app_fcncode_values.h  default_lora_fc_downlink_app_interface_cfg_values.h  default_lora_fc_downlink_app_internal_cfg_values.h  default_lora_fc_downlink_app_mission_cfg.h  default_lora_fc_downlink_app_msg.h  default_lora_fc_downlink_app_msgdefs.h  default_lora_fc_downlink_app_msgid_values.h  default_lora_fc_downlink_app_msgids.h  eds_lora_fc_downlink_app_msgdefs.h  (+6 more)
mavlink_bridge_app/: CMakeLists.txt  README.md  arch_build.cmake  mission_build.cmake
notes/: integration_steps.md  mission_app_runtime_spec.md
telemetry_app/: CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  arch_build.cmake  mission_build.cmake
telemetry_app/.github/workflows/: codeql-build.yml
telemetry_app/config/: default_telemetry_app_fcncode_values.h  default_telemetry_app_interface_cfg_values.h  default_telemetry_app_internal_cfg_values.h  default_telemetry_app_mission_cfg.h  default_telemetry_app_msg.h  default_telemetry_app_msgdefs.h  default_telemetry_app_msgid_values.h  default_telemetry_app_msgids.h  default_telemetry_app_msgstruct.h  default_telemetry_app_perfids.h  default_telemetry_app_platform_cfg.h  default_telemetry_app_topicid_values.h  eds_telemetry_app_fcncode_values.h  eds_telemetry_app_msgstruct.h  eds_telemetry_app_tbldefs.h
telemetry_app/fsw/inc/: telemetry_app_eventids.h  telemetry_app_fcncodes.h  telemetry_app_interface_cfg.h  telemetry_app_internal_cfg.h  telemetry_app_topicids.h
telemetry_app/fsw/src/: telemetry_app.c  telemetry_app.h  telemetry_app_cmds.c  telemetry_app_cmds.h  telemetry_app_dispatch.c  telemetry_app_dispatch.h  telemetry_app_eds_dispatch.c  telemetry_app_utils.c  telemetry_app_utils.h  telemetry_app_version.h
telemetry_app/unit-test/: CMakeLists.txt
telemetry_app/unit-test/common/: eventcheck.c  eventcheck.h  setup.c  setup.h
telemetry_app/unit-test/coveragetest/: coveragetest_telemetry_app.c  coveragetest_telemetry_app_cmds.c  coveragetest_telemetry_app_dispatch.c  coveragetest_telemetry_app_eds_dispatch.c  coveragetest_telemetry_app_utils.c  telemetry_app_coveragetest_common.h
telemetry_app/unit-test/stubs/: telemetry_app_cmds_stubs.c  telemetry_app_dispatch_stubs.c  telemetry_app_global_stubs.c  telemetry_app_stubs.c  telemetry_app_utils_stubs.c
tools/: telemetry_app_e2e_sender.py
(+55 files in other folders)
